--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div id="headPagination" class="row justify-content-between" width="100%">
   	<div class="col-xs-auto col-sm-auto col-md-auto">
-        <app-add-task></app-add-task>
+        <app-add-task (addTask)="addTask($event)"></app-add-task>
         <app-show-limited-tasks></app-show-limited-tasks>
     </div>
     <app-search></app-search>
