--- a/frontend/src/main/web/src/app/components/add-task/add-task.component.html
+++ b/frontend/src/main/web/src/app/components/add-task/add-task.component.html
@@ -1,9 +1,9 @@
-<form class="addTaskForm">
+
   <div id="faPlusIcon">
-      <i (click)="saveTask()" ,class="fa fa-plus-circle fa-2x" style="color:green"></i>
+      <i (click)="onClick()" class="fa fa-plus-circle fa-2x" style="color:green"></i>
   </div>
 
   <div id="addTaskDiv">
       <input [(ngModel)]="description" name="description" type="text" class="form-control form-control-sm" placeholder="Add task">
   </div>
-</form>
+
