--- a/frontend/src/main/web/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/main/web/src/app/components/tasks/tasks.component.html
@@ -1,4 +1,13 @@
-<div class="row justify-content-sm-center">
+
+<div id="headPagination" class="row justify-content-between" width="100%">
+  <div class="col-xs-auto col-sm-auto col-md-auto">
+      <app-add-task (addTask)="addTask($event)"></app-add-task>
+      <app-show-limited-tasks></app-show-limited-tasks>
+  </div>
+   <app-search></app-search>
+</div>
+
+<div class="row justify-content-sm-center" >
 <table id="tasksTable" class="table table-striped table-bordered table-sm" cellspacing="0" >
   <thead class="thead-dark">
     <tr>
@@ -9,7 +18,7 @@
   </thead>
 
   <tbody>
-      <tr app-task *ngFor="let task of tasks" [task]="task">
+      <tr app-task  *ngFor="let task of tasks" [task]="task">
       </tr>
   </tbody>
 
