--- a/frontend/src/main/web/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/main/web/src/app/components/tasks/tasks.component.html
@@ -14,6 +14,7 @@
       <th class="th-sm">Id</th>
       <th class="th-sm">Description</th>
       <th class="th-sm">Done</th>
+      <th class="th-sm">Trash</th>
     </tr>
   </thead>
 
@@ -31,6 +32,7 @@
     <th class="th-sm">Id</th>
     <th class="th-sm">Description</th>
     <th class="th-sm">Done</th>
+    <th class="th-sm">Trash</th>
   </tr>
   </tfoot>
 </table>
