changed to pagination on Angular and backend

--- a/frontend/src/main/web/src/app/components/page-navigation/page-navigation.component.html
+++ b/frontend/src/main/web/src/app/components/page-navigation/page-navigation.component.html
@@ -1,28 +1,27 @@
   
   	<div class="col-auto">
   		<div class="dataTables_info" id="dtBasicExample_info" role="status" aria-live="polite">
- 			 Showing 1 to 25 of 57 entries
+ 			 Showes {{page.numberOfElements}} of {{page.totalElements}}
   		</div>
   	</div>
   	<div class="col-auto">
   		<div class="dataTables_paginate paging_simple_numbers" id="dtBasicExample_paginate">
   			<ul class="pagination">
-  				<li class="paginate_button page-item previous disabled" id="dtBasicExample_previous">
-  					<a href="#" aria-controls="dtBasicExample" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>
+  				<li class="paginate_button page-item previous" [ngClass]="getClassForFirstPageLink()" id="dtBasicExample_previous">
+  					<a [routerLink]="" (click)="previousPage()"  class="page-link">Previous</a>
   				</li>
-  				<li class="paginate_button page-item active">
-  					<a href="#" aria-controls="dtBasicExample" data-dt-idx="1" tabindex="0" class="page-link">1</a>
+  				<li class="paginate_button page-item" [ngClass]="getActivePage(1)">
+  					<a [routerLink]=""  (click)="getCustomPage(1)" class="page-link">1</a>
  				</li>
-  				<li class="paginate_button page-item ">
-  					<a href="#" aria-controls="dtBasicExample" data-dt-idx="2" tabindex="0" class="page-link">2</a>
+  				<li class="paginate_button page-item" [ngClass]="getActivePage(2)">
+  					<a [routerLink]="" (click)="getCustomPage(2)" class="page-link">2</a>
   				</li>
-  				<li class="paginate_button page-item ">
-  					<a href="#" aria-controls="dtBasicExample" data-dt-idx="3" tabindex="0" class="page-link">3</a>
+  				<li class="paginate_button page-item" [ngClass]="getActivePage(3)">
+  					<a [routerLink]="" (click)="getCustomPage(3)" class="page-link">3</a>
   				</li>
-  				<li class="paginate_button page-item next" id="dtBasicExample_next">
-  					<a href="#" aria-controls="dtBasicExample" data-dt-idx="4" tabindex="0" class="page-link">Next</a>
+  				<li class="paginate_button page-item next" [ngClass]="getClassForLastPageLink()" id="dtBasicExample_next">
+  					<a [routerLink]="" (click)="nextPage()" class="page-link">Next</a>
   				</li>
   			</ul>
   		</div>
   	</div>
- 
