--- a/frontend/src/main/web/src/app/components/task/task.component.html
+++ b/frontend/src/main/web/src/app/components/task/task.component.html
@@ -1,5 +1,6 @@
 <td [ngClass]="setClasses()">{{task.id}}</td>
-<td [ngClass]="setClasses()">{{task.description}}</td>
+<td [ngClass]="setClasses()">{{task.createDate  | dateFormatPipe }}</td>
+<td [ngClass]="setClasses()"  width="65%">{{task.description}}</td>
 <td (click)="onToggle(task)">
   <i id="isDoneIcon" [className]="task.done ? 'fa fa-check-circle fa-x2' : 'fa fa-circle-thin fa-x2'" style="color:blue">
   </i>
