--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="container">
-  <app-tasks></app-tasks>
+<div class="container" text-align="justify">
+  <app-tasks ></app-tasks>
 </div>
