--- a/frontend/src/main/web/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/main/web/src/app/components/tasks/tasks.component.html
@@ -1,20 +1,23 @@
 
 <div id="headPagination" class="row justify-content-between" width="100%">
   <div class="col-xs-auto col-sm-auto col-md-auto">
-      <app-add-task (addTask)="addTask($event)"></app-add-task>
-      <app-show-limited-tasks></app-show-limited-tasks>
+    <app-add-task (addTask)="addTask($event)"></app-add-task>
+    <app-show-limited-tasks
+      (pageSizeEvent)="refreshPageWithNewPageSize($event)"
+      class="col-xs-auto col-sm-auto col-md-auto"></app-show-limited-tasks>
   </div>
    <app-search></app-search>
 </div>
 
-<div class="row justify-content-sm-center" >
-<table id="tasksTable" class="table table-striped table-bordered table-sm" cellspacing="0" >
+<div class="row justify-content-sm-center "   >
+<table id="tasksTable" class="table table-striped table-bordered table-sm " >
   <thead class="thead-dark">
     <tr>
-      <th class="th-sm">Id</th>
-      <th class="th-sm">Description</th>
-      <th class="th-sm">Done</th>
-      <th class="th-sm">Trash</th>
+      <th >Id</th>
+      <th>Create date</th>
+      <th>Description</th>
+      <th>Done</th>
+      <th>Trash</th>
     </tr>
   </thead>
 
@@ -29,10 +32,11 @@
 
   <tfoot class="thead-dark">
   <tr>
-    <th class="th-sm">Id</th>
-    <th class="th-sm">Description</th>
-    <th class="th-sm">Done</th>
-    <th class="th-sm">Trash</th>
+    <th>Id</th>
+    <th>Create date</th>
+    <th>Description</th>
+    <th>Done</th>
+    <th>Trash</th>
   </tr>
   </tfoot>
 </table>
