--- a/frontend/src/main/web/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/main/web/src/app/components/tasks/tasks.component.html
@@ -6,7 +6,7 @@
       (pageSizeEvent)="refreshPageWithNewPageSize($event)"
       class="col-xs-auto col-sm-auto col-md-auto"></app-show-limited-tasks>
   </div>
-   <app-search></app-search>
+   <app-search (allFieldsCriteriaEvent)="search($event)"></app-search>
 </div>
 
 <div class="row justify-content-sm-center "   >
