fixed navigation to pages

--- a/frontend/src/main/web/src/app/components/add-task/add-task.component.html
+++ b/frontend/src/main/web/src/app/components/add-task/add-task.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <div id="addTaskDiv">
-      <input [(ngModel)]="description" name="description" type="text" class="form-control form-control-sm" placeholder="Add task">
+      <input [(ngModel)]="description" name="description" type="text" maxlength="85" class="form-control form-control-sm" placeholder="Add task">
   </div>
 
