--- a/frontend/src/main/web/src/app/components/page-navigation/page-navigation.component.html
+++ b/frontend/src/main/web/src/app/components/page-navigation/page-navigation.component.html
@@ -1,27 +1,27 @@
   
   	<div class="col-auto">
   		<div class="dataTables_info" id="dtBasicExample_info" role="status" aria-live="polite">
- 			 Showes {{page.numberOfElements}} of {{page.totalElements}}
+ 			 Showes {{currentNumberOfFirstRow}} - {{currentNumberOfLastRow}} of {{page.totalElements}}
   		</div>
   	</div>
   	<div class="col-auto">
   		<div class="dataTables_paginate paging_simple_numbers" id="dtBasicExample_paginate">
   			<ul class="pagination">
+          <li class="paginate_button page-item next" [ngClass]="getClassForFirstPageLink()" id="firstPage">
+            <a [routerLink]="" (click)="getCustomPage(1)" class="page-link">First</a>
+          </li>
   				<li class="paginate_button page-item previous" [ngClass]="getClassForFirstPageLink()" id="dtBasicExample_previous">
-  					<a [routerLink]="" (click)="previousPage()"  class="page-link">Previous</a>
+  					<a [routerLink]="" (click)="previousPage()"  class="page-link"><<</a>
   				</li>
-  				<li class="paginate_button page-item" [ngClass]="getActivePage(1)">
-  					<a [routerLink]=""  (click)="getCustomPage(1)" class="page-link">1</a>
- 				</li>
-  				<li class="paginate_button page-item" [ngClass]="getActivePage(2)">
-  					<a [routerLink]="" (click)="getCustomPage(2)" class="page-link">2</a>
-  				</li>
-  				<li class="paginate_button page-item" [ngClass]="getActivePage(3)">
-  					<a [routerLink]="" (click)="getCustomPage(3)" class="page-link">3</a>
+  				<li class="paginate_button page-item" [ngClass]="getActivePage(page.pageable.pageNumber + 1)">
+  					<a [routerLink]="" (click)="getCustomPage(page.pageable.pageNumber + 1)" class="page-link">{{page.pageable.pageNumber + 1}}</a>
   				</li>
   				<li class="paginate_button page-item next" [ngClass]="getClassForLastPageLink()" id="dtBasicExample_next">
-  					<a [routerLink]="" (click)="nextPage()" class="page-link">Next</a>
+  					<a [routerLink]="" (click)="nextPage()" class="page-link">>></a>
   				</li>
+          <li class="paginate_button page-item next" [ngClass]="getClassForLastPageLink()" id="lastPage">
+            <a [routerLink]="" (click)="getCustomPage(page.totalPages)" class="page-link">Last</a>
+          </li>
   			</ul>
   		</div>
   	</div>
