migrate table representation to agGrid add a bunch of functionality

--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,3 +1,13 @@
 <div class="container" text-align="justify">
-  <app-tasks ></app-tasks>
+  <app-tasks></app-tasks>
+
 </div>
+<!--<ag-grid-angular-->
+  <!--style = "width: 900px; height: 750px; padding-top: 10px;"-->
+  <!--class = "ag-theme-balham"-->
+  <!--[columnDefs] = "colmDef"-->
+  <!--[animateRows] = "true"-->
+  <!--[enableColResize] = "true"-->
+  <!--[rowDragManaged] = "true"-->
+  <!--(gridReady) = "onGridReady($event)"-->
+<!--&gt;</ag-grid-angular>-->
