--- a/frontend/src/main/web/src/styles.css
+++ b/frontend/src/main/web/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(..\node_modules\bootstrap\dist\css\bootstrap.min.css);
 @import url(..\node_modules\font-awesome\css\font-awesome.css);
+@import url(..\node_modules\ag-grid-community\dist\styles\ag-grid.css);
+@import url(..\node_modules\ag-grid-community\dist\styles\ag-theme-balham.css);
+
