--- a/frontend/src/main/web/src/app/app.component.css
+++ b/frontend/src/main/web/src/app/app.component.css
@@ -2,3 +2,17 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
+nav a.active {
+  color: coral;
+  font-style: normal;
+  font-size: 20px;
+}
+nav a {
+  padding: 5px;
+}
+
+#columnNav {
+  margin-top: 10px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
