--- a/frontend/src/main/web/src/styles.css
+++ b/frontend/src/main/web/src/styles.css
@@ -3,4 +3,9 @@
 @import url(..\node_modules\font-awesome\css\font-awesome.css);
 @import url(..\node_modules\ag-grid-community\dist\styles\ag-grid.css);
 @import url(..\node_modules\ag-grid-community\dist\styles\ag-theme-balham.css);
-
+/*@import "../node_modules/ag-grid-community/dist/styles/ag-grid.css";*/
+/*@import "../node_modules/ag-grid-community/dist/styles/ag-theme-balham.css";*/
+/*@import "../node_modules/font-awesome/css/font-awesome.css";*/
+/*@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";*/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
