change bootstrap to flex layout

--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,12 +1,9 @@
-<div class="container">
-  <div id="columnNav" class="col bg-dark">
-  <nav>
-    <a routerLink="/profile" routerLinkActive="active">Profile</a>
-    <a routerLink="/tasks" routerLinkActive="active">Tasks</a>
-  </nav>
-    </div>
-</div>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<div fxLayout="column">
+  <div fxLayoutAlign="center">
+    <app-menu></app-menu>
+  </div>
+  <div fxLayoutAlign="center">
+    <router-outlet></router-outlet>
+  </div>
 
+</div>
