--- a/frontend/src/main/web/src/styles.css
+++ b/frontend/src/main/web/src/styles.css
@@ -8,4 +8,5 @@
 /*@import "../node_modules/font-awesome/css/font-awesome.css";*/
 /*@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "../node_modules/bootstrap-social/bootstrap-social.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
