finished refactoring modules

--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column">
-<!--  <div fxLayoutAlign="center">-->
-<!--    <app-menu></app-menu>-->
-<!--  </div>-->
+  <div fxLayoutAlign="center">
+    <app-menu></app-menu>
+  </div>
   <div fxLayoutAlign="center">
     <router-outlet></router-outlet>
   </div>
