--- a/frontend/src/main/web/src/app/modules/shared/components/menu/menu.component.html
+++ b/frontend/src/main/web/src/app/modules/shared/components/menu/menu.component.html
@@ -2,5 +2,6 @@
   <nav>
     <a routerLink="/profile" routerLinkActive="active">Profile</a>
     <a routerLink="/tasks" routerLinkActive="active">Tasks</a>
+    <a routerLink="/users" routerLinkActive="active">Users</a>
   </nav>
 </div>
