--- a/frontend/src/main/web/src/app/modules/auth/components/auth/auth.component.html
+++ b/frontend/src/main/web/src/app/modules/auth/components/auth/auth.component.html
@@ -4,7 +4,7 @@
   <div fxLayout="row">
     <div>
     <h2>Login </h2>
-    <form [formGroup]="loginForm">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">UserName:</label>
         <input type="text" class="form-control" formControlName="username" id="username" autocomplete="off">
