--- a/frontend/src/main/web/src/app/modules/auth/components/auth/auth.component.html
+++ b/frontend/src/main/web/src/app/modules/auth/components/auth/auth.component.html
@@ -38,5 +38,8 @@
       </div>
     </div>
   </mat-card-actions>
+  <div>
+    <a routerLink="/registration">Sign up</a>
+  </div>
 </mat-card>
 </div>
